starting to style

--- a/main.html
+++ b/main.html
@@ -6,5 +6,6 @@
 	<body>
 		<main id="main">
 		<script src="main.js"></script>
+		<link href="sty.css" rel="stylesheet" type="text/css">
 	</body>
 </html>
